[gd_scene load_steps=25 format=3 uid="uid://b0ybd1gq4xm14"]

[ext_resource type="Script" path="res://boss/boss2/scenes/boss2.gd" id="1_gmwpr"]
[ext_resource type="Texture2D" uid="uid://e3b4gtvh62ul" path="res://boss/boss2/assets/MiniBear.png" id="1_xre2n"]
[ext_resource type="Script" path="res://state_machine/state_machine.gd" id="2_npvf5"]
[ext_resource type="Script" path="res://boss/boss2/scripts/boss2_state.gd" id="3_k05w5"]
[ext_resource type="PackedScene" uid="uid://du3w6se4y2ofr" path="res://shooter/shooter.tscn" id="3_kmpu6"]
[ext_resource type="Script" path="res://boss/boss2/scripts/boss2_idle.gd" id="5_2qrsx"]
[ext_resource type="Script" path="res://boss/boss2/scripts/boss2_walk.gd" id="6_1sgv7"]
[ext_resource type="Script" path="res://boss/boss2/scripts/boss2_attack.gd" id="7_a3kj5"]
[ext_resource type="Script" path="res://boss/boss2/scripts/boss2_rage.gd" id="8_qbjmo"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rbr54"]
radius = 13.5
height = 44.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6clsr"]
radius = 13.5
height = 44.0

[sub_resource type="Animation" id="Animation_4ct8q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Melee/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1jjug"]
resource_name = "attack"
length = 1.00001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33, 34, 35]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Melee/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_nufif"]
resource_name = "idle"
length = 0.60001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.00107285, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Melee/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_n6nva"]
resource_name = "rage"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [51, 52, 53, 54, 55, 56, 57, 58, 59, 61]
}

[sub_resource type="Animation" id="Animation_acbhy"]
resource_name = "walk"
length = 0.50001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [20, 21, 22]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Melee/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_d6oph"]
_data = {
"RESET": SubResource("Animation_4ct8q"),
"attack": SubResource("Animation_1jjug"),
"idle": SubResource("Animation_nufif"),
"rage": SubResource("Animation_n6nva"),
"walk": SubResource("Animation_acbhy")
}

[sub_resource type="Animation" id="Animation_pax3p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_20b3g"]
resource_name = "hit_flash"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.796078, 0, 0.780392, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rky58"]
_data = {
"RESET": SubResource("Animation_pax3p"),
"hit_flash": SubResource("Animation_20b3g")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s27w1"]
size = Vector2(602, 98.0555)

[sub_resource type="LabelSettings" id="LabelSettings_p4vo8"]
font_size = 10

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4iba3"]
size = Vector2(29.5, 55)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fg1tl"]
size = Vector2(14, 55)

[node name="Boss2" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_gmwpr")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -20)
scale = Vector2(4, 4)
texture = ExtResource("1_xre2n")
hframes = 10
vframes = 8

[node name="HitBox" type="Area2D" parent="."]
position = Vector2(0, 21)
rotation = 1.5708
scale = Vector2(2, 2)
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(-4, 1.448e-05)
shape = SubResource("CapsuleShape2D_rbr54")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, 13)
rotation = 1.5708
scale = Vector2(2, 2)
shape = SubResource("CapsuleShape2D_6clsr")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_d6oph")
}

[node name="HitFlash" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rky58")
}

[node name="PlayerDetection" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
position = Vector2(0, 23.0625)
scale = Vector2(2, 0.45)
shape = SubResource("RectangleShape2D_s27w1")

[node name="debug" type="Label" parent="."]
offset_left = -16.0
offset_top = -23.0
offset_right = 17.0
offset_bottom = -8.0
text = "debug"
label_settings = SubResource("LabelSettings_p4vo8")

[node name="Melee" type="Area2D" parent="."]
collision_layer = 20
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Melee"]
position = Vector2(48.25, 17.5)
shape = SubResource("RectangleShape2D_4iba3")

[node name="Deflect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Deflect"]
position = Vector2(170, 18)
shape = SubResource("RectangleShape2D_fg1tl")

[node name="Shooter" parent="." instance=ExtResource("3_kmpu6")]
position = Vector2(44, 17)
scale = Vector2(2, 0.45)
speed = 400.0
bullet_key = 1

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_npvf5")
initial_state = NodePath("Boss2State/Boss2Idle")

[node name="Boss2State" type="Node" parent="StateMachine"]
script = ExtResource("3_k05w5")

[node name="Boss2Idle" type="Node" parent="StateMachine/Boss2State"]
script = ExtResource("5_2qrsx")

[node name="Boss2Walk" type="Node" parent="StateMachine/Boss2State"]
script = ExtResource("6_1sgv7")

[node name="Boss2Attack" type="Node" parent="StateMachine/Boss2State"]
script = ExtResource("7_a3kj5")

[node name="Boss2Rage" type="Node" parent="StateMachine/Boss2State"]
script = ExtResource("8_qbjmo")

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_entered" from="PlayerDetection" to="StateMachine/Boss2State/Boss2Idle" method="_on_player_detection_body_entered"]
[connection signal="body_exited" from="PlayerDetection" to="." method="_on_player_detection_body_exited"]
[connection signal="body_exited" from="PlayerDetection" to="StateMachine/Boss2State/Boss2Walk" method="_on_player_detection_body_exited"]
[connection signal="area_shape_entered" from="Melee" to="." method="_on_melee_area_shape_entered"]
[connection signal="body_entered" from="Melee" to="." method="_on_melee_body_entered"]
[connection signal="area_entered" from="Deflect" to="." method="_on_deflect_area_entered"]
